# career-intelligence-agent

./: .gitignore  PULL_REQUEST.md  README.md  pyproject.toml
.specify/.gemini/commands/: sp.reverse-engineer.toml
.specify/history/prompts/constitution/: 1-project-constitution-update-v1-0-0.constitution.prompt.md  2-code-quality-enhancement-v1-1-0.constitution.prompt.md  3-terminology-refinement-v1-1-1.constitution.prompt.md
.specify/history/prompts/general/: 4-github-repo-status-update.general.prompt.md  5-github-repo-creation-guidance.general.prompt.md  6-initial-push-to-github.general.prompt.md
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh
docs/: AGENT_GUIDE.md  PRODUCTION_READINESS_AUDIT.md
specs/: constitution.md  plan.md  spec.md  tasks.md
src/: __init__.py  main.py  orchestrator.py
src/agents/: __init__.py  job_matcher.py  resume_analyzer.py  roadmap_gen.py  skill_gap_agent.py
src/config/: settings.py
src/core/: __init__.py  base_agent.py  contracts.py
src/utils/: file_handler.py  llm_wrapper.py
tests/integration/: test_orchestrator.py
tests/unit/: test_calculator.py  test_job_matcher.py  test_resume_analyzer.py  test_roadmap_gen.py  test_skill_gap.py
