[project]
name = "calculator-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Hafiz Abdul Aziz", email = "abdulazizmemon888@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "google-genai>=2.10.0",
    "tenacity>=9.1.0",
    "pypdf>=6.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=0.23.0",
]
